Adiciona o título antes do form

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body class="bg-dark">
     <div class="container-fluid vh-100 d-flex align-items-center justify-content-center py-4">
         <div class="col-12 col-lg-10 col-xl-8">
+            <h1 class="text-center text-white fw-bold mb-4 display-5" style="text-shadow: 0 2px 8px #000;">
+                Calculadora de Sub-rede
+            </h1>
             <div class="card shadow-lg border-0 mb-4">
                 <div class="card-body p-4">
                     <form onsubmit="calcular(event)">
